@@ -26,14 +26,14 @@ to specify, in one of these ways, an affine semigroup  in &GAP;.
 		      <C>List</C> is a list of n-tuples of nonnegative integers, if the semigroup to be created is n-dimensional. The n-tuples may be given as a list or by a sequence of individual elements. The output is the affine semigroup spanned by <C>List</C>.
 		      <P/>
 		      <C>String</C> does not need to be present. When it is present, it must be <C>"generators"</C> and <C>List</C> must be a list, not a sequence of individual elements.
-			<Example><![CDATA[		
+			<Example><![CDATA[
 gap> s1 := AffineSemigroupByGenerators([1,3],[7,2],[1,5]);
 <Affine semigroup in 2 dimensional space, with 3 generators>
 gap> s2 := AffineSemigroupByGenerators([[1,3],[7,2],[1,5]]);;
 gap> s3 := AffineSemigroup("generators",[[1,3],[7,2],[1,5]]);;
-gap> s4 := AffineSemigroup([1,3],[7,2],[1,5]);;              
-gap> s5 := AffineSemigroup([[1,3],[7,2],[1,5]]);;             
-gap> Length(Set([s1,s2,s3,s4,s5]));             
+gap> s4 := AffineSemigroup([1,3],[7,2],[1,5]);;
+gap> s5 := AffineSemigroup([[1,3],[7,2],[1,5]]);;
+gap> Length(Set([s1,s2,s3,s4,s5]));
 1
 ]]></Example>
   </Description>
@@ -42,14 +42,26 @@ gap> Length(Set([s1,s2,s3,s4,s5]));
                     <Func Name="AffineSemigroupByEquations" Arg="List"/>
                     <Func Name="AffineSemigroup" Arg="String, List" Label="by equations"/>
                     <Description>
-		      <C>List</C> represents a list of equations. We represent the equations as a list of lists of integers, all with the same length. Every list is a row of the matrix of coefficients of the system of equations.
-		       Returns the (full) affine semigroup defined by the system <M>A * X=0 \mod md </M>, where the rows of <M>A</M> are the elements of <C>List</C>.
+		      <C>List</C> is a list with two components. The first represents a a matrix with integer coefficients, say <M>A=(a_{ij})</M>, and so it is a list of lists of integers all with the same length. The second component is a list of positive integers, say <M>d=(d_i)</M>, which may be empty. The list <M>d</M> must be of length less than or equal to the length of <M>A</M> (number of rows of <M>A</M>).
+          <P/>
+          The output is the full semigroup of nonnegative integer solutions to the system of homogeneous equations <M>\begin{array}
+          a_{11}x_1+\cdots+a_{1n}x_n\equiv 0\bmod d_1,\\
+          \cdots \\
+          a_{k1}x_1+\cdots+a_{kn}x_n\equiv 0\bmod d_k,\\
+          a_{k+1\, 1}x_1+\cdots +a_{k+1\, n}=0,\\
+          \cdots
+          a_{m1}x_1+\cdots+a_{mn}x_n=0.
+          \end{array}</M>
+          <P/>
+          If <M>d</M> is empty, then there will be no equations in congruences.
+          <P/>
+          For instance, the equations <M>x+y\equiv 0\bmod 2,\ x-2y=0</M> will be represented as <M>A</M> equal to [[1,1],[1,-2]] and the moduli <d> equal to [2].
 		      <P/>
 		      <C>String</C> does not need to be present. When it is present, it must be <C>"equations"</C>.
-			<Example><![CDATA[		
-gap> s1 := AffineSemigroupByEquations([[[-2,1]],[3]]);            
+			<Example><![CDATA[
+gap> s1 := AffineSemigroupByEquations([[[-2,1]],[3]]);
 <Affine semigroup>
-gap> s2 := AffineSemigroup("equations",[[[-2,1]],[3]]); 
+gap> s2 := AffineSemigroup("equations",[[[1,1]],[3]]);
 <Affine semigroup>
 gap> s1=s2;
 true
@@ -60,13 +72,13 @@ true
                     <Func Name="AffineSemigroupByInequalities" Arg="List"/>
                     <Func Name="AffineSemigroup" Arg="String, List" Label="by inequalities"/>
                     <Description>
-		      <C>List</C> represents the inequalities: recall that for the equations in congruences, if we arrange them so that they are the first ones in the list, we provide the corresponding moduli in a list. So for instance, the equations <M>x+y\equiv 0\bmod 2,\ x-2y=0</M> will be represented as [[1,1],[1,-2]] and the moduli [2].
-		        Returns the (full) affine semigroup defined by the system  <M>List*X\ge 0</M> over 
-the nonnegative integers.
+		      <C>List</C> is a list of lists (a matrix) of integers that represents a set of inequalities.
+          <P/>
+          Returns the (normal) affine semigroup of nonegative integer solutions of the system of inequalities <M>List\times X\ge 0</M>.
 		      <P/>
 		      <C>String</C> does not need to be present. When it is present, it must be <C>"inequalities"</C>.
-			<Example><![CDATA[		
-gap> a1:=AffineSemigroupByInequalities([[2,-1],[-1,3]]);               
+			<Example><![CDATA[
+gap> a1:=AffineSemigroupByInequalities([[2,-1],[-1,3]]);
 <Affine semigroup>
 gap> a2:=AffineSemigroup("inequalities",[[2,-1],[-1,3]]);
 <Affine semigroup>
